Fix logo on mobile

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -113,7 +113,7 @@ a:link {
 }
 
 .main-logo-link, .main-logo {
-	display: block;
+	display: inline-block;
 }
 
 .main-logo-link {
